# Wolfenstein-Taller1

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  app_info.txt  config.json  dynamic_view.cpp  installer.sh  main.cpp  prueba.yaml  prueba_sin_editar.yaml  sprite_name_generator.py  static_view.cpp  testing.cpp  testing2.cpp  testing3.cpp
client/: CMakeLists.txt
client/src/main/: caster.cpp  caster.h  client.cpp  client.h  collision.h  frame_limiter.h  game.cpp  game.h  game_sound.cpp  game_sound.h  main.cpp  main_client.cpp  map.cpp  map.h  map_loader.cpp  map_loader.h  object.cpp  object.h  player.cpp  player.h  ray_casting.cpp  ray_casting.h  resource.cpp  resource_manager.cpp  resource_manager.h  server.cpp  server.h  server_error.cpp  server_error.h  stage.cpp  stage.h
client/src/main/casters/: caster.h  game_caster.cpp  game_caster.h  match_maker_caster.cpp  match_maker_caster.h
client/src/main/casting/: collision.h  ray_casting.cpp  ray_casting.h
client/src/main/events/: event.cpp  event.h  movement.h  movement_event.cpp  movement_event.h
client/src/main/game/: game.cpp  game.h  launcher.cpp  launcher.h  launcher_error.cpp  leaderboard.cpp  leaderboard.h  match.cpp  match.h  match_maker.cpp  match_maker.h
client/src/main/guns/: chain_cannon.cpp  chain_cannon.h  gun.cpp  gun.h  hit.cpp  hit.h  knife.cpp  knife.h  machine_gun.cpp  machine_gun.h  pistol.cpp  pistol.h  rocket_launcher.cpp  rocket_launcher.h  spray.cpp
client/src/main/hud/: hud.cpp  hud.h
client/src/main/packet_handlers/: add_rocket_hanlder.h  change_gun_handler.cpp  change_gun_handler.h  explode_rocket_handler.h  grab_handler.cpp  grab_handler.h  move_handler.cpp  move_handler.h  move_rocket_handler.h  movement_handler.cpp  movement_handler.h  packet_handler.cpp  packet_handler.h  packet_handler_factory.cpp  packet_handler_factory.h  rotation_handler.cpp  rotation_handler.h  shot_handler.cpp  shot_handler.h  spawn_player_handler.cpp  spawn_player_handler.h
client/src/main/sdl/: image.cpp  sdl_error.cpp  surface.cpp  surface.h  text.cpp  text.h  texture.cpp  texture.h  window.cpp
client/src/main/threads/: receive_from_server_thread.cpp  receive_from_server_thread.h  send_to_server_thread.cpp  send_to_server_thread.h
client/src/main/view/: mainwindow.cpp  mainwindow.h  mainwindow.ui  match_view.ui
client/src/tests/: gun_tests.cpp  gun_tests.h  main_tests.cpp  pistol_tests.cpp  resource_manager_tests.cpp  resource_manager_tests.h  spray_tests.cpp
client/tests/: gun_tests.cpp  main_tests.cpp
common/: CMakeLists.txt  ids.yaml  ids_santi.yaml  socket.cpp  socket.h  socket_error.h
common/config/: ids.yaml
common/src/game_tests/: gun_tests.cpp  gun_tests.h  match_tests.cpp  player_test.cpp
common/src/main/: Iobservable.cpp  Iobserver.cpp  Iobserver.h  config.yaml  config_loader.cpp  config_loader.h  constants.h  event_queue.cpp  event_queue.h  identifiable.cpp  identifiable.h  object.cpp  object.h  paths.cpp  paths.h
common/src/main/casting/: collision.h  ray_casting.h
common/src/main/collisions/: box_mask.cpp  box_mask.h  circle_mask.cpp  circle_mask.h  mask.h  switch_mask.cpp  switch_mask.h
common/src/main/data_structures/: blocking_queue.h  blocking_queue.tpp  protected_queue.h  protected_queue.tpp
common/src/main/events/: event_info.h
common/src/main/exceptions/: client_error.cpp  client_error.h
common/src/main/guns/: chain_cannon.cpp  chain_cannon.h  gun.cpp  gun.h  knife.cpp  knife.h  machine_gun.cpp  machine_gun.h  pistol.cpp  pistol.h  rocket_launcher.cpp  rocket_launcher.h  spray.h
common/src/main/ids/: gun_ids.h  images_ids.h  map_ids.h  movement_ids.h  packet_ids.h
common/src/main/packets/: packet.cpp  packet.h  packet_error.cpp  packet_error.h  packet_handler_factory_error.cpp  packet_handler_factory_error.h  packing.cpp  packing.h
common/src/main/socket/: socket.cpp  socket.h  socket_error.cpp  socket_error.h
common/src/main/threads/: receive_from_peer_thread.cpp  receive_from_peer_thread.h  send_to_peer_thread.cpp  send_to_peer_thread.h  thread.cpp  thread.h
common/src/main/utils/: angle.cpp  angle.h  base_map.cpp  base_map.h  matrix.h  point.cpp  point.h  range_error.cpp  range_error.h  ray.cpp  ray.h  rectangle.h
common/src/tests/: main_tests.cpp
common/tests/: blocking_queue_tests.cpp  main_tests.cpp  matrix_tests.cpp  point_tests.cpp  protected_queue_tests.cpp  protected_queue_tests.h  ray_tests.cpp  rectangle_tests.cpp  rectangle_tests.h  resource_manager_tests.cpp  resource_tests.cpp
common/tests/game_test/: client_mock.cpp  client_mock.h  gun_tests.cpp  gun_tests.h  match_tests.cpp  match_tests.h  player_test.cpp  player_test.h
editor/src/main/: CMakeLists.txt
server/: CMakeLists.txt  config_loader.cpp  config_loader.h  main_server.cpp
server/src/main/: bot.cpp  bot.h  client.cpp  client.h  client_manager.cpp  client_manager.h  config_loader.cpp  config_loader.h  main_server.cpp  map.cpp  map.h  map_loader.cpp  map_loader.h  match_manager.cpp  match_manager.h  match_manager_error.h  script.lua  server.cpp  server.h
server/src/tests/: bot_test.cpp  bot_test.h  client_mock.cpp  client_mock.h  common_tools.cpp  main_tests.cpp  match_tests.cpp  match_tests.h  player_test.cpp  player_test.h  tests_setup.cpp  tests_setup.h
src/main/: CMakeLists.txt  caster.cpp  caster.h  collision.cpp  config.yaml  ids.yaml  ids_santi.yaml  map.cpp  map.h  matrix.h  point.cpp  point.h  ray.cpp  ray.h  ray_casting.cpp  ray_casting.h  resource.cpp  resource.h  resource_manager.cpp  resource_manager.h  sdl_window.h  window.cpp  window.h
src/main/common/: socket_error.cpp
src/main/editor/: Makefile  app  cmake_install.cmake  editor.cpp  label.cpp  label.h  rect.cpp  rect.h  sdl_window.h  tp  ui_celd.h  ui_mainwindow.h  ui_mapgrid.h  ui_option.h  ui_prueba.h  window.cpp  window.h
src/main/sdl/: image.cpp  image.h  surface.cpp  surface.h  texture.cpp  texture.h  window.cpp  window.h
src/main/server/: config_loader.cpp  config_loader.h
src/main/utils/: point.cpp  point.h  ray.cpp  ray.h  rectangle.cpp  rectangle.h
(+712 files in other folders)
